# LogicalProgramming_OOP

./: README.md
Logica_POO/: AppBancaria.cpp  AppBancaria.h  Banco.cpp  Banco.h  CMakeLists.txt  CompraEnCuotas.cpp  CompraEnCuotas.h  CuentaBancaria.cpp  CuentaBancaria.h  Fecha.cpp  Fecha.h  Persona.cpp  Persona.h  RedInterbancaria.cpp  RedInterbancaria.h  Tarjeta.cpp  Tarjeta.h  main.cpp
